# voxel

./: LICENSE  pyproject.toml  readme.md
tests/: __init__.py  test_orientation.py  test_resampling.py  utility.py
voxel/: __init__.py  acquisition.py  affine.py  bounds.py  caching.py  filters.py  mesh.py  slicing.py  space.py  volume.py
voxel/io/: __init__.py  affine.py  mesh.py  utility.py  volume.py
