[project]
name = 'voxel'
description = 'Learning-Based Utilities for Medical Image Analysis'
readme = 'readme.md'
keywords = ['medical imaging', 'deep-learning', 'MRI', 'AI']
classifiers = [
    'Topic :: Scientific/Engineering',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]
authors = [
    {name = 'Andrew Hoopes'}
]
requires-python = '>=3.7'
dynamic = ['version']
dependencies = [
    'numpy',
    'torch >= 1.12',
]

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
packages = ['voxel']

[tool.setuptools.dynamic]
version = {attr = 'voxel.__version__'}
