[project]
name = 'voxel'
description = 'Torch framework for volumetric medical imaging structures'
readme = 'readme.md'
keywords = ['medical imaging', 'deep-learning', 'AI', 'MRI']
classifiers = [
    'Topic :: Scientific/Engineering',
    'Intended Audience :: Science/Research',
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]
authors = [
    {name = 'Andrew Hoopes'}
]
requires-python = '>=3.8'
dynamic = ['version']
dependencies = [
    'numpy',
    'torch >= 1.12',
]

[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
packages = ['voxel', 'voxel.io']

[tool.setuptools.dynamic]
version = {attr = 'voxel.__version__'}
